# cjdquick-app

./: .env.example  .gitignore  FRONTEND_AUDIT_REPORT.md  GAP_ANALYSIS_VS_INDUSTRY_LEADERS.md  package-lock.json  package.json  vercel.json
oms/: .env.production  (+19 more)
oms/backend/: .env.b2c.example  alembic.ini  fix_channel_inventory_table.sql  pyproject.toml  render-b2c.yaml  requirements.txt
oms/backend/alembic/: env.py
oms/backend/alembic/versions/: 002_wms_phase1_enhancements.py
oms/backend/app/: __init__.py  main.py
oms/backend/app/api/routes/: __init__.py  auth.py  dashboard.py  inventory.py  orders.py  skus.py
oms/backend/app/api/v1/: __init__.py
oms/backend/app/api/v1/allocation/: __init__.py
oms/backend/app/api/v1/analytics/: __init__.py
oms/backend/app/api/v1/api_keys/: __init__.py
oms/backend/app/api/v1/auth/: __init__.py
oms/backend/app/core/: __init__.py  audit_log.py  config.py  database.py  deps.py  rate_limit.py  security.py
oms/backend/app/models/: __init__.py  api_key.py  b2b.py  b2b_logistics.py  base.py  brand.py  channel_inventory.py  company.py  customer.py  enums.py  external_order.py  goods_receipt.py  inbound.py  inventory.py  inventory_allocation.py  logistics_extended.py  ndr.py  order.py  putaway.py  qc.py  returns.py  shipping_allocation.py  sku.py  transporter.py  user.py  wave.py  wms_extended.py
oms/backend/app/scripts/: seed_returns.py
oms/backend/app/services/: fifo_sequence.py  inventory_allocation.py  putaway.py  scheduler.py
oms/backend/migrations/: b2c_schema.sql  create_api_key_table.sql  create_brand_table.sql
(+1499 files in other folders)
